<resources>
    <string name="app_name">DrawerLayout</string>
    <string name="open_lesson">Открыть список уроков</string>
    <string name="open_list">DrawerLayout</string>
    <string name="lesson_1">Урок 1</string>
    <string name="lesson_2">Урок 2</string>
    <string name="lesson_3">Урок 3</string>
    <string name="lesson_4">Урок 4</string>
    <string name="lesson_5">Урок 5</string>
    <string name="lesson_6">Урок 6</string>
    <string name="lesson_7">Урок 7</string>
    <string name="lesson_8">Урок 8</string>
    <string name="lesson_9">Урок 9</string>
    <string name="lesson_10">Урок 10</string>
    <string name="lesson_11" translatable="false">Урок 11</string>
    <string name="lesson_12" translatable="false">Урок 12</string>
    <string name="lesson_13" translatable="false">Урок 13</string>
    <string name="lesson_14" translatable="false">Урок 14</string>
    <string name="lesson_15" translatable="false">Урок 15</string>
    <string name="lesson_16" translatable="false">Урок 16</string>
    <string name="lesson_17" translatable="false">Урок 17</string>
    <string name="lesson_18" translatable="false">Урок 18</string>
    <string name="lesson_19" translatable="false">Урок 19</string>
    <string name="lesson_20" translatable="false">Урок 20</string>

    <string name="title" translatable="false">Вычислить "С"</string>
    <string name="result_info_pifagor" translatable="false">Результат: </string>
    <string name="input_a" translatable="false">Введите значение \"а\" </string>
    <string name="input_b" translatable="false">Введите значение \"b\" </string>
    <string name="result_pifagor" translatable="false">Результат </string>

    <string name="Ok" translatable="false">OK</string>
    <string name="sign_in" translatable="false">Sign in</string>
    <string name="sign_up" translatable="false">Sign up</string>
    <string name="avatar" translatable="false">Avatar</string>
    <string name="login" translatable="false">Login</string>
    <string name="password" translatable="false">Password</string>
    <string name="name" translatable="false">Имя</string>
    <string name="name2" translatable="false">Фамилия</string>
    <string name="name3" translatable="false">Отчество</string>
    <string name="done" translatable="false">Готово</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="nothing_found" translatable="false">No Message</string>
    <string name="something_went_wrong" translatable="false">something_went_wrong</string>

    <string name="movie_desc" translatable="false">Комедия, драмма</string>
    <string name="movie_rating" translatable="false">IMDb 8.6/10</string>
    <string name="description" translatable="false">Один парень со своей женой, поехал отдыхать на черное море. И на одной из экскурсия им встретилась обезьянка и орел.</string>
</resources>