<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/draver"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activitymain.MainActivity">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_200"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/open_list" />

        <Button
            android:id="@+id/open"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/open_lesson" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/text_view"
        android:orientation="vertical">

        <Button
            android:id="@+id/lesson_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openLesson1"
            android:text="@string/lesson_1" />

        <Button
            android:id="@+id/lesson_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openLesson2"
            android:text="@string/lesson_2" />

        <Button
            android:id="@+id/lesson_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openLesson3"
            android:text="@string/lesson_3" />

        <Button
            android:id="@+id/lesson_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openLesson4"
            android:text="@string/lesson_4" />

        <Button
            android:id="@+id/lesson_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lesson_5" />

        <Button
            android:id="@+id/lesson_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lesson_6" />

        <Button
            android:id="@+id/lesson_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lesson_7" />

        <Button
            android:id="@+id/lesson_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lesson_8" />

        <Button
            android:id="@+id/lesson_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lesson_9" />

        <Button
            android:id="@+id/lesson_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lesson_10" />
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>